tests/tslib_syntax/tslib_syntax.exp
Error ---------------------------------------------------------------------------- anonymous_default_export_usage.js:6:1

Cannot cast `f(...)` to number because string [1] is incompatible with number [2]. [incompatible-type]

   anonymous_default_export_usage.js:6:1
   6| f("hello") as number; // ERROR - string is not number
      ^^^^^^^^^^

References:
   anonymous_default_export_usage.js:6:3
   6| f("hello") as number; // ERROR - string is not number
        ^^^^^^^ [1]
   anonymous_default_export_usage.js:6:15
   6| f("hello") as number; // ERROR - string is not number
                    ^^^^^^ [2]


Error ---------------------------------------------------------------------------- anonymous_default_export_usage.js:7:1

Cannot cast `f(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   anonymous_default_export_usage.js:7:1
   7| f(42) as string; // ERROR - number is not string
      ^^^^^

References:
   anonymous_default_export_usage.js:7:3
   7| f(42) as string; // ERROR - number is not string
        ^^ [1]
   anonymous_default_export_usage.js:7:10
   7| f(42) as string; // ERROR - number is not string
               ^^^^^^ [2]


Error --------------------------------------------------------------------------------------- declare_var_extras.js:24:1

Cannot cast `s` to string literal `bar` because string literal `foo` [1] is incompatible with string literal `bar` [2].
[incompatible-type]

   declare_var_extras.js:24:1
   24| s as 'bar'; // ERROR - 'foo' !== 'bar'
       ^

References:
   declare_var_extras.js:2:19
    2| declare const s = 'foo';
                         ^^^^^ [1]
   declare_var_extras.js:24:6
   24| s as 'bar'; // ERROR - 'foo' !== 'bar'
            ^^^^^ [2]


Error --------------------------------------------------------------------------------------- declare_var_extras.js:25:1

Cannot cast `n` to number literal `20` because number literal `10` [1] is incompatible with number literal `20` [2].
[incompatible-type]

   declare_var_extras.js:25:1
   25| n as 20; // ERROR - 10 !== 20
       ^

References:
   declare_var_extras.js:3:19
    3| declare const n = 10;
                         ^^ [1]
   declare_var_extras.js:25:6
   25| n as 20; // ERROR - 10 !== 20
            ^^ [2]


Error --------------------------------------------------------------------------------------- declare_var_extras.js:26:1

Cannot cast `bi` to bigint literal `200n` because bigint literal `100n` [1] is incompatible with bigint literal
`200n` [2]. [incompatible-type]

   declare_var_extras.js:26:1
   26| bi as 200n; // ERROR - 100n !== 200n
       ^^

References:
   declare_var_extras.js:5:20
    5| declare const bi = 100n;
                          ^^^^ [1]
   declare_var_extras.js:26:7
   26| bi as 200n; // ERROR - 100n !== 200n
             ^^^^ [2]


Error -------------------------------------------------------------------------------------- declare_var_extras.js:30:27

`declare` variable declarations cannot have both a type annotation and an initializer. [unsupported-syntax]

   30| declare const e: string = 'hello'; // ERROR
                                 ^^^^^^^


Error -------------------------------------------------------------------------------------- declare_var_extras.js:33:19

Initializer in a `declare` variable must be a literal (string, number, bigint, or boolean). [unsupported-syntax]

   33| declare const f = 1 + 2; // ERROR
                         ^^^^^


Error -------------------------------------------------------------------------------------- declare_var_extras.js:36:15

`declare` variable declarations require a type annotation or a literal initializer. [unsupported-syntax]

   36| declare const h; // ERROR
                     ^


Error -------------------------------------------------------------------------------------- declare_var_extras.js:39:15

Destructuring is not supported in `declare` variable declarations. [unsupported-syntax]

   39| declare const [g] = 'foo'; // ERROR
                     ^^^


Error ----------------------------------------------------------------------------------- generic_tagged_template.js:4:1

Cannot cast template string to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   generic_tagged_template.js:4:1
   4| tag<number>`hello` as empty; // ERROR
      ^^^^^^^^^^^^^^^^^^

References:
   generic_tagged_template.js:4:5
   4| tag<number>`hello` as empty; // ERROR
          ^^^^^^ [1]
   generic_tagged_template.js:4:23
   4| tag<number>`hello` as empty; // ERROR
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------- mapped_type_variance_op.js:7:5

Cannot assign `3` to `pro.foo` because property `foo` is not writable. [cannot-write]

   7| pro.foo = 3; // ERROR - writing to +readonly property
          ^^^


Error ---------------------------------------------------------------------------------- mapped_type_variance_op.js:26:6

Cannot assign `3` to `pror.foo` because property `foo` is not writable. [cannot-write]

   26| pror.foo = 3; // ERROR - writing to readonly property
            ^^^


Error --------------------------------------------------------------------------------- mapped_type_variance_op.js:31:21

Cannot instantiate `MutableFromWO` because an index signature declaring the expected key / value type is not readable.
[cannot-read]

   31| declare const mfwo: MutableFromWO<WriteOnlyO>; // ERROR - input props are not readable
                           ^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------- mapped_type_variance_op.js:32:6

Cannot get `mfwo.foo` because property `foo` is not readable. [cannot-read]

   32| mfwo.foo as number; // ERROR - still writeonly, can't read
            ^^^


Error ---------------------------------------------------------------------------------- optional_class_property.js:10:1

Cannot cast `foo.a` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   optional_class_property.js:10:1
   10| foo.a as empty; // ERROR
       ^^^^^

References:
   optional_class_property.js:2:7
    2|   a?: string;
             ^^^^^^ [1]
   optional_class_property.js:10:10
   10| foo.a as empty; // ERROR
                ^^^^^ [2]


Error ---------------------------------------------------------------------------------- optional_class_property.js:10:1

Cannot cast `foo.a` to empty because undefined [1] is incompatible with empty [2]. [incompatible-type]

   optional_class_property.js:10:1
   10| foo.a as empty; // ERROR
       ^^^^^

References:
   optional_class_property.js:2:7
    2|   a?: string;
             ^^^^^^ [1]
   optional_class_property.js:10:10
   10| foo.a as empty; // ERROR
                ^^^^^ [2]


Error ------------------------------------------------------------------------------------------ optional_indexer.js:3:1

Cannot cast `t["foo"]` to number because undefined [1] is incompatible with number [2]. [incompatible-type]

   optional_indexer.js:3:1
   3| t["foo"] as number; // ERROR - undefined is not number
      ^^^^^^^^

References:
   optional_indexer.js:1:22
   1| type T = {[string]?: number};
                           ^^^^^^ [1]
   optional_indexer.js:3:13
   3| t["foo"] as number; // ERROR - undefined is not number
                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ optional_indexer.js:7:1

Cannot cast `s["foo"]` to number because undefined [1] is incompatible with number [2]. [incompatible-type]

   optional_indexer.js:7:1
   7| s["foo"] as number; // ERROR - undefined is not number
      ^^^^^^^^

References:
   optional_indexer.js:5:31
   5| type S = {readonly [string]?: number};
                                    ^^^^^^ [1]
   optional_indexer.js:7:13
   7| s["foo"] as number; // ERROR - undefined is not number
                  ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- optional_indexer.js:13:1

Cannot cast `c["foo"]` to number because undefined [1] is incompatible with number [2]. [incompatible-type]

   optional_indexer.js:13:1
   13| c["foo"] as number; // ERROR - undefined is not number
       ^^^^^^^^

References:
   optional_indexer.js:10:14
   10|   [string]?: number;
                    ^^^^^^ [1]
   optional_indexer.js:13:13
   13| c["foo"] as number; // ERROR - undefined is not number
                   ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- optional_indexer.js:19:1

Cannot cast `i["foo"]` to number because undefined [1] is incompatible with number [2]. [incompatible-type]

   optional_indexer.js:19:1
   19| i["foo"] as number; // ERROR - undefined is not number
       ^^^^^^^^

References:
   optional_indexer.js:16:14
   16|   [string]?: number;
                    ^^^^^^ [1]
   optional_indexer.js:19:13
   19| i["foo"] as number; // ERROR - undefined is not number
                   ^^^^^^ [2]


Error ---------------------------------------------------------------------------------- optional_unlabeled_tuple.js:7:6

Cannot cast array literal to `T` because in index `1`: number [1] is incompatible with string [2]. [incompatible-type]

   optional_unlabeled_tuple.js:7:6
   7| ['', 1] as T; // ERROR - number incompatible with string
           ^ [1]

References:
   optional_unlabeled_tuple.js:2:19
   2| type T = [string, string?];
                        ^^^^^^ [2]


Error --------------------------------------------------------------------------------- optional_unlabeled_tuple.js:15:5

Cannot cast array literal to `S` because in index `1`: string [1] is incompatible with number [2]. [incompatible-type]

   optional_unlabeled_tuple.js:15:5
   15| [1, ''] as S; // ERROR
           ^^ [1]

References:
   optional_unlabeled_tuple.js:10:20
   10| type S = [number?, number?];
                          ^^^^^^ [2]


Error --------------------------------------------------------------------------------- optional_unlabeled_tuple.js:23:2

Cannot cast array literal to `U` because in index `0`: [incompatible-type]
 - Either boolean [1] is incompatible with string [2].
 - Or boolean [1] is incompatible with number [3].

   optional_unlabeled_tuple.js:23:2
   23| [true] as U; // ERROR
        ^^^^ [1]

References:
   optional_unlabeled_tuple.js:18:11
   18| type U = [string | number?];
                 ^^^^^^ [2]
   optional_unlabeled_tuple.js:18:20
   18| type U = [string | number?];
                          ^^^^^^ [3]


Error --------------------------------------------------------------------------------- optional_unlabeled_tuple.js:38:8

Cannot cast array literal to `Sp` because in index `2`: number [1] is incompatible with string [2]. [incompatible-type]

   optional_unlabeled_tuple.js:38:8
   38| [1, 2, 3] as Sp; // ERROR
              ^ [1]

References:
   optional_unlabeled_tuple.js:34:33
   34| type Sp = [...[number, number], string?];
                                       ^^^^^^ [2]


Error --------------------------------------------------------------------------------- optional_unlabeled_tuple.js:45:2

Cannot cast array literal to `C` because in index `0`: string [1] is incompatible with number [2]. [incompatible-type]

   optional_unlabeled_tuple.js:45:2
   45| [''] as C<string>; // ERROR
        ^^ [1]

References:
   optional_unlabeled_tuple.js:41:33
   41| type C<T> = [T extends string ? number : boolean?];
                                       ^^^^^^ [2]


Error --------------------------------------------------------------------------------- optional_unlabeled_tuple.js:52:2

Cannot cast array literal to `W` because in index `0`: number [1] is incompatible with string [2]. [incompatible-type]

   optional_unlabeled_tuple.js:52:2
   52| [1] as W; // ERROR
        ^ [1]

References:
   optional_unlabeled_tuple.js:49:11
   49| type W = [Alias?];
                 ^^^^^ [2]


Error -------------------------------------------------------------------------------- optional_unlabeled_tuple.js:55:16

Invalid tuple type [1], required tuple element [2] must be after optional tuple element [3].
[tuple-required-after-optional]

   optional_unlabeled_tuple.js:55:16
   55| type Invalid = [string?, number]; // ERROR
                      ^^^^^^^^^^^^^^^^^ [1]

References:
   optional_unlabeled_tuple.js:55:26
   55| type Invalid = [string?, number]; // ERROR
                                ^^^^^^ [2]
   optional_unlabeled_tuple.js:55:17
   55| type Invalid = [string?, number]; // ERROR
                       ^^^^^^^ [3]


Error --------------------------------------------------------------------------------------- private_class_field.js:8:3

Cannot get `x.private` because property `private` is missing in `C` [1]. [prop-missing]

   private_class_field.js:8:3
   8| x.private; // ERROR
        ^^^^^^^

References:
   private_class_field.js:6:18
   6| declare const x: C;
                       ^ [1]


Error ---------------------------------------------------------------------------------------------- typeof_this.js:15:1

Cannot cast `obj.method()` to empty because `MyClass` [1] is incompatible with empty [2]. [incompatible-type]

   typeof_this.js:15:1
   15| obj.method() as empty; // ERROR
       ^^^^^^^^^^^^

References:
   typeof_this.js:5:13
    5|   method(): typeof this {
                   ^^^^^^^^^^^ [1]
   typeof_this.js:15:17
   15| obj.method() as empty; // ERROR
                       ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- typeof_this.js:16:1

Cannot cast `obj.getX()` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   typeof_this.js:16:1
   16| obj.getX() as empty; // ERROR
       ^^^^^^^^^^

References:
   typeof_this.js:9:11
    9|   getX(): typeof this.x {
                 ^^^^^^^^^^^^^ [1]
   typeof_this.js:16:15
   16| obj.getX() as empty; // ERROR
                     ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- unique_symbol.js:7:1

Cannot cast `x` to empty because symbol [1] is incompatible with empty [2]. [incompatible-type]

   unique_symbol.js:7:1
   7| x as empty; // ERROR
      ^

References:
   unique_symbol.js:1:18
   1| declare const x: unique symbol;
                       ^^^^^^^^^^^^^ [1]
   unique_symbol.js:7:6
   7| x as empty; // ERROR
           ^^^^^ [2]



Found 31 errors
